--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,38 @@
 # Dependencies
 node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
+.pnp/
+.pnp.js
 
-# Environment variables
-.env
-.env.local
-.env.*.local
+# Testing
+/coverage/
 
-# Build output
-dist/
-build/
-out/
+# Next.js
+.next/
+/out/
 
-# IDE and editor files
+# Production
+/build/
+/dist/
+
+# Misc
+.DS_Store
+*.pem
+.env*
+!.env.example
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE
 .idea/
 .vscode/
 *.swp
 *.swo
-.DS_Store
 
-# Logs
-logs/
-*.log
-
-# Testing
-coverage/
-
-# Misc
-.tmp/
-.temp/
-
+# Local environment
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
