--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "compression": "^1.7.4",
+    "morgan": "^1.10.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2"
   },
