--- a/main-app/admin-dashboard/package.json
+++ b/main-app/admin-dashboard/package.json
@@ -4,10 +4,17 @@
   "description": "Multi-tenant admin dashboard for medical device companies",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
+    "dev:local": "BACKEND_URL=http://localhost:5000 next dev -p 3000",
+    "dev:vercel": "next dev -p 3000",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build:analyze": "ANALYZE=true next build",
+    "start": "next start -p ${PORT:-3000}",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit",
+    "export": "next export",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -31,8 +38,16 @@
     "yup": "^1.3.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.0.0",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "concurrently": "^8.2.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.0.0",
-    "eslint-config-next": "^14.0.0"
+    "eslint-config-next": "^14.0.0",
+    "typescript": "^5.0.0",
+    "wait-on": "^7.0.1"
   },
   "keywords": [
     "medical-device",
