--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,10 @@
   "description": "Simple client backend portal with Supabase authentication",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node server-refactored.js",
+    "dev": "nodemon server-refactored.js",
+    "start:legacy": "node server-legacy.js",
+    "dev:legacy": "nodemon server-legacy.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
